Bumping dependencies, adding more tests, adjusting starter