@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -7,7 +8,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.3</version>
+		<version>2.5.2</version>
 		<relativePath />
 	</parent>
 
@@ -15,12 +16,25 @@
 	<artifactId>juno-sdk-autoconfiguration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>juno-sdk-autoconfiguration</name>
+	<packaging>jar</packaging>
 
 	<properties>
+        <!-- Project -->		
 		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <!-- Plugins -->		
+		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+		<argLine>-Xverify:none -Xms1024m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
+		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+		
+		<!-- Dependencies  -->
 		<mockserver.version>5.11.2</mockserver.version>
+		<commons-lang3.version>3.12.0</commons-lang3.version>
+		<commons-io.version>2.10.0</commons-io.version>
+		<commons-collection4.version>4.4</commons-collection4.version>
+		<jose4j.version>0.7.8</jose4j.version>
 	</properties>
 
 	<dependencies>
@@ -43,14 +57,23 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.4</version>
+			<version>${commons-collection4.version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.bitbucket.b_c</groupId>
+			<artifactId>jose4j</artifactId>
+			<version>${jose4j.version}</version>
+		</dependency>
 
 		<!-- Other -->
 		<dependency>
@@ -89,7 +112,7 @@
 			<dependency>
 				<groupId>org.junit</groupId>
 				<artifactId>junit-bom</artifactId>
-				<version>5.7.1</version>
+				<version>5.8.0-M1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
